# worldcup

./: AGENTS.md  Cargo.toml  README.md  req.md
src/: api.rs  format.rs  main.rs
