[package]
name = "worldcup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tabled = { version = "0.17", features = ["ansi"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
